--- a/src/components/HelpModal/HelpModal.scss
+++ b/src/components/HelpModal/HelpModal.scss
@@ -9,6 +9,10 @@
     z-index: 10000;
 }
 
+#dark .help {
+    background-color: rgb(87 85 85 / 40%);
+}
+
 .help_show {
     display: block;
 }
@@ -25,6 +29,7 @@
     background-color: $bgColor;
     width: 850px;
     max-height: 700px;
+    box-shadow: 0 5px 15px rgba(0,0,0,.5);
 }
 
 #dark .help__content {
