--- a/src/components/WhyRecyclexBlock/WhyRecyclexBlock.scss
+++ b/src/components/WhyRecyclexBlock/WhyRecyclexBlock.scss
@@ -151,10 +151,9 @@
             margin-top: 20px;
             flex-direction: column;
             align-items: center;
-            row-gap: 80px;
-            grid-row-gap: 80px;
+            /* row-gap: 80px; */
         }       
-        &__items{
+        &__items {
             width: 100%;
             padding-left: 0;
         }
@@ -171,7 +170,7 @@
             line-height: 13px;
         }  
         &__img {
-            margin-top: 0;
+            margin-top: 80px;
             width: 85%;
             height: 130px;
         }
